--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "passwordmail",
+  "name": "testProject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.1"
+    "jsonwebtoken": "^9.0.2",
+    "node-json-db": "^2.3.0",
+    "nodemailer": "^6.9.7"
   }
 }
